--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.11.0",
+    "@clerk/nextjs": "^4.17.3",
+    "@prisma/client": "^4.13.0",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
@@ -37,7 +38,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
